app/assets/stylesheets/layouts/home.css.scss
div {
  margin: 0px;
  padding: 0px;
  border: 0px none;
  outline: 0px none;
  font-family: $font-body;
}

.l-home {

  .header-wrapper {
    background-color: #ffffff;
    height: 130px;
  }

  .header {
    margin: 0 auto;
    width: 1055px;
    height: 57px;
    padding-top: 35px;
  }

  .logo-wrapper {
    float: left;
    width: 200px;
  }

  .logo {
    background-image: url(image-path('logo-64.png'));
    width: 55px;
    height: 57px;
    float: left;
    margin-right: 10px;
  }

  .logo-text {
    display: inline;
    font-size: 22px;
    height: 55px;
    letter-spacing: 2px;

    h3 {
      margin: 0px;
      padding-top: 12px;
    }
  }

  .header-link {
    float: right;
    margin-right: 30px;
    display: inline;
    height: 46px;
    line-height: 46px;
    text-decoration: none;
    color: #222222;
    font-size: 16px;
    border: 0px none;
    margin-top: 10px;
  }

  .header-button {
    float: right;
    margin-left: 20px;
    height: 46px;
    line-height: 48px;
    text-align: center;
    text-decoration: none;
    font-size: 16px;
    margin-top: 10px;
    box-shadow: 0px -2px 0px rgba(0, 0, 0, 0.15) inset;
  }

  .button-log-in {
    background-color: #EAEAEA;
    color: #222222;
    border-radius: 5px;
    width: 104px;
  }

  .button-log-in:hover {
    background-color: darken(#EAEAEA, 3%);
  }

  .button-sign-up {
    background-color: #FF5656;
    color: #ffffff;
    border-radius: 5px;
    width: 121px;
  }

  .button-sign-up:hover {
    background-color: darken(#FF5656, 3%);
  }

  .hero-wrapper {
    background-color: #3782BA;
    height: 730px;

    .hero {
      margin: 0 auto;
      width: 1055px;
      height: 100%;
      text-align: center;

      h4 {
        color: #ffffff;
        font-weight: 100;
      }

      .hero-text-header {
        padding-top: 73px;
        font-size: 40px;
      }

      .hero-text-1 {
        opacity: .6;
        font-size: 25px;
      }

      .hero-text-2 {
        color: #ffffff;
        padding-top: 50px;
        font-weight: 400;
      }
    }
  }

  .conversation {
    margin: 0 auto;
    width: 550px;
    height: 527px;
    background-image: url(image-path('form.png'));
    background-position: 50% 25%;
    border-radius: 5px;
    position: relative;
    bottom: 450px;
    border: 1px solid #999999;
    margin-bottom: -650px;
  }

  .demo {
    margin: 0 auto;
    width: 1055px;
    padding: 20px;
    margin-top: 300px;

    .demo-text {
      float: left;

      .demo-text-1 {
        font-size: 27px;
        color: #555555;
        text-transform: uppercase;
      }

      .demo-text-2 {
        font-size: 22px;
        color: #999999;
        font-weight: 200;
        margin: 10px 0px;
      }
    }

    .demo-button {
      float: right;
      background-color: #FF5656;
      color: #ffffff;
      border-radius: 5px;
      width: 238px;
      height: 68px;
      box-shadow: 0px -2px 0px rgba(0, 0, 0, 0.15) inset;
      text-decoration: none;
      line-height: 68px;
      text-align: center;
      font-size: 22px;
    }

    .demo-button:hover {
      background-color: darken(#FF5656, 3%);
    }

  }

  .demo-image {
    padding-top: 100px;

    .screenshot {
      margin: 0 auto;
      background-image: url(image-path('screenshot.png'));
      width: 1161px;
      height: 660px;
    }
  }

  .line {
    margin: 50px auto;
    width: 787px;
    height: 7px;
    background-color: #E8E8E8;
  }

  .pricing {
    margin: 80px auto;
    width: 1055px;
    text-align: center;

    .pricing-text {
      font-size: 22px;
      margin-bottom: 80px;

      h4:nth-child(1) {
        font-weight: 400;
        margin: 20px 0;
        color: #777777;
      }

      h4:nth-child(2) {
        font-weight: 200;
        width: 720px;
        margin: 0 auto;
        color: #777777;
      }
    }

    .pricing-text-end {
      margin: 70px auto;

      h1 {
        color: #777777;
        font-weight: 200 !important;
        font-size: 22px;
        font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
        text-transform: none;
      }
    }
  }

  .contact-us {
    margin: 0 auto;
    text-align: center;
    width: 510px;
    color: #777777;
    font-size: 22px;

    h4:nth-child(1) {
      font-weight: 400;
      text-transform: none;
      font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
      color: #777777;
    }

    h4:nth-child(2) {
      font-weight: 200;
      font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
      color: #777777;
      line-height: 35px;
    }

    a {
      display: inline-block;
      margin: 70px auto;
      width: 238px;
      height: 68px;
      line-height: 68px;
      text-align: center;
      background: #FF5656;
      border-radius: 5px;
      box-shadow: 0px -2px 0px rgba(0, 0, 0, 0.15) inset;

      text-decoration: none;
      color: #ffffff;
      font-size: 22px;
    }

    a:hover {
      background-color: darken(#FF5656, 3%);
    }
  }

  .footer {
    margin: 100px auto;
    text-align: center;
    width: 340px;
    height: 163px;
    border-radius: 5px;
    background-color: #E8E8E8;
    color: #949AB0;
    font-size: 22px;


    .assembly-logo {
      display: inline-block;
      width: 37px;
      height: 34px;
      margin: 40px auto 15px auto;
    }

    h4 {
      font-weight: 600;
      color: #949AB0;
      text-transform: uppercase;
      letter-spacing: 4px;
    }
  }

}

